# Detec-o-Automatizada-de-Exoplanetas-em-Dados-do-TESS-Utilizando-CNN-2D

./: .gitignore  README.md  create_images.py  environment.yml  pre_processing.py  pyproject.toml  requirements.txt
docs/: DEV_GUIDE.md  README_rescore.md
scripts/: Comandos.txt  __init__.py  batch_make_windows.ps1  build_cnn2d.py  build_split_filelist.py  check_masks.py  check_npz.py  common_windows.py  consolidate_windows.py  dataset_npz.py  eval_cnn2d.py  eval_cnn2d_ensemble_topk.py  explain_cnn2d.py  fetch_and_make_windows.py  fix_balance.py  get_tpf_or_tesscut.py  inspect_preds.py  make_cube_gif.py  make_group_folds.py  make_holdout_by_tic.py  make_lists_by_tic.py  make_windows_auto_bls.py  make_windows_from_toi.py  rank_with_centroid.py  rescore_with_centroid.py  run_one_target.py  select_threshold.py  split_confusions.py  train_cnn2d.py  train_cnn2d_cv.py  train_cnn2d_kfold_strat.py
src/projeto_toi/: __init__.py  config.py
src/projeto_toi/cli/: __init__.py  create_image_windows.py  download_cutout.py  explain_model.py  make_windows.py  preprocess_lightcurve.py  rescore_predictions.py  train_model.py
src/projeto_toi/data/: __init__.py  download.py  images.py  preprocess.py  windows.py
src/projeto_toi/datasets/: __init__.py  npz_dataset.py
src/projeto_toi/models/: __init__.py  cnn2d.py
src/projeto_toi/pipeline/: __init__.py  explain.py  rescore.py  train.py
src/projeto_toi/utils/: __init__.py  logging.py  paths.py  randomness.py
tests/: conftest.py  test_dataset_npz.py  test_explain_smoke.py  test_rescore.py
