[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "projeto-toi"
version = "0.1.0"
description = "Pipeline funcional para dados TESS/TOI"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Projeto IA Aeroespacial" }]
dependencies = [
    "astropy>=5.0",
    "astroquery>=0.4.7",
    "lightkurve>=2.3.0",
    "matplotlib>=3.7",
    "numpy>=1.23",
    "pandas>=2.0",
    "requests>=2.31",
    "scikit-learn>=1.3",
    "torch>=2.1",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
